--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ StackMates/obj/Debug/StackMates.pdb
 *.exe
 *.cache
 *.csproj
+*.exe
+*.pdb
+*.cache
+*.exe
+*.ide
+.vs/StackMates/v15/.suo
+.vs/StackMates/v15/.suo
+*.ide
+/.vs/Stackmates.1.2/v15/.suo
+/.vs/Stackmates.1.2/v15/Server/sqlite3/storage.ide-wal
+/.vs/Stackmates.1.2/v15/Server/sqlite3/storage.ide-shm
+/.vs/Stackmates.1.2/v15/Server/sqlite3/db.lock
